# phrust

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  analysis.md  deny.toml  error_classes.md  error_patterns.md  flake.nix  goal.md  justfile  prompts.md  prompts2.md
crates/php_bench/: Cargo.toml
crates/php_bench/benches/: perf_hotpaths.rs
crates/php_bytecode_cache/: Cargo.toml
crates/php_bytecode_cache/src/: lib.rs
crates/php_executor/: Cargo.toml
crates/php_executor/src/: cache.rs  composer_metadata.rs  diagnostics.rs  engine_compat.rs  executor.rs  include_compiler.rs  input.rs  lib.rs  pipeline.rs  profile.rs  psr_map.rs  request.rs
crates/php_extensions/: Cargo.toml
crates/php_extensions/src/: apcu.rs  ctype.rs  generated.rs  lib.rs
crates/php_ir/: Cargo.toml
crates/php_ir/src/: builder.rs  compilation.rs  constants.rs  display.rs  function.rs  instruction.rs  lib.rs  literal_text.rs  lower.rs  module.rs  rule_selection.rs  verify.rs
crates/php_ir/src/lower/: consts.rs  context.rs  control_flow.rs  declarations.rs  diagnostics.rs  expression_targets.rs  expressions.rs  mod.rs  session.rs  statements.rs  tests.rs
crates/php_ir/tests/: bytecode_snapshots.rs
crates/php_jit/: Cargo.toml
crates/php_jit/examples/: cranelift_instruction_coverage.rs  cranelift_native_call_audit.rs  cranelift_native_control_audit.rs  cranelift_native_dynamic_code_audit.rs  cranelift_native_suspension_audit.rs  cranelift_native_transition_audit.rs  cranelift_precondition_identity.rs  native_cache_probe.rs
crates/php_jit/src/: aarch64.rs  abi.rs  backend.rs  code_manager.rs  code_memory.rs  copy_patch.rs  cranelift_lowering.rs  dynamic_code.rs  eligibility.rs  helpers.rs  host_isa.rs  lib.rs  native_cache.rs  x86_64.rs
crates/php_jit/src/copy_patch/: builtin_leaf.rs  value_leaf.rs
crates/php_jit/src/cranelift_lowering/: baseline_streaming.rs  call_metadata.rs  dynamic_code.rs  executable_region.rs  fallback_helpers.rs  module_layout.rs  native_linkage.rs  terminators.rs  tests.rs  value_lowering.rs
crates/php_jit/src/region_ir/: bind.rs  builder.rs  coverage.rs  dump.rs  executable.rs  executable_tests.rs  mod.rs  osr.rs  ownership.rs  rules.rs  semantic_lowering.rs  semantic_ops.rs  value_flow.rs  verify.rs
crates/php_parser_cli/: Cargo.toml
crates/php_parser_cli/src/: main.rs
crates/php_runtime/: Cargo.toml  build.rs
crates/php_runtime/examples/: native_operation_audit.rs
crates/php_runtime/src/: array.rs  callable.rs  context.rs  convert.rs  datetime.rs  diagnostic.rs  error_output.rs  extension.rs  fiber.rs  gc.rs  generator.rs  globals.rs  ini.rs  jit_array.rs  layout_stats.rs  lib.rs  native_ops.rs  numeric_string.rs  object.rs  output.rs  pcre.rs  phar.rs  reference.rs  request_state.rs  resource.rs  runtime_memory.rs  scalar_methods.rs  serialization.rs  session.rs  source_span.rs  sqlite.rs  string.rs  todo_runtime.rs  tokenizer.rs  types.rs  value.rs  xml.rs  xml_backend.rs
crates/php_runtime/src/builtins/: context.rs  error.rs  mod.rs  registry.rs  request_state.rs  signatures.rs
crates/php_runtime/src/db/: mod.rs  mysql.rs  mysql_wasm.rs  postgres.rs  postgres_wasm.rs
crates/php_runtime/src/object/: attribute.rs  class.rs  debug.rs  member.rs  mod.rs  storage.rs  tests.rs  types.rs
crates/php_runtime/tests/: layout_stats_disabled_by_default.rs
crates/php_server/: Cargo.toml
crates/php_server/src/: access_log.rs  config.rs  diagnostics.rs  http3.rs  lib.rs  main.rs  metrics.rs  multipart.rs  perf_trace.rs  persistent_metadata.rs  php_request.rs  request_pipeline.rs  request_profile.rs  response.rs  routing.rs  serve.rs  server.rs  session_store.rs  sessions.rs  state.rs  static_files.rs  tls.rs  worker_pool.rs
crates/php_server/tests/: health.rs
crates/php_std/: Cargo.toml
crates/php_std/src/: abi.rs  arginfo.rs  constants.rs  extensions.rs  introspection.rs  lib.rs
crates/php_syntax/: Cargo.toml
crates/php_syntax/src/: diagnostics.rs  lib.rs  parse.rs  recovery.rs  syntax_kind.rs  syntax_node.rs  token_source.rs  tree_sink.rs
crates/php_syntax/src/grammar/: arrays.rs  attributes.rs  classes.rs  declarations.rs  expressions.rs  functions.rs  mod.rs  names.rs  php85.rs  source_file.rs  statements.rs  strings.rs  types.rs  variables.rs
crates/php_syntax/src/parser/: core.rs  event.rs  expected.rs  marker.rs  mod.rs  precedence.rs
crates/php_syntax/tests/: diagnostic_snapshots.rs  fixture_roundtrip.rs  parser_properties.rs  parser_snapshots.rs  perf_smoke.rs
crates/php_vm/: Cargo.toml  build.rs
crates/php_vm/src/: aliasing.rs  compiled_unit.rs  copy_patch_bridge.rs  counters.rs  deopt.rs  dependency_units.rs  frame.rs  frame_memory.rs  include.rs  inline_cache.rs  last_use.rs  lib.rs  literal_pool.rs  osr.rs  persistent_feedback.rs  quickening.rs  region_profile.rs  std_builtins.rs  test_include_compiler.rs  tiering.rs  todo_runtime.rs  vm.rs
crates/php_vm/src/bytecode/: mod.rs  render.rs
crates/php_vm/src/counters/: native_counters.rs
crates/php_vm/src/include/: cache.rs  cache_freshness.rs  compile_coordinator.rs  compiled_cache.rs  compiler.rs  diagnostics.rs  metadata.rs  metrics.rs  mod.rs  resolution_cache.rs  resolver.rs  source.rs  tests.rs
crates/php_vm/src/inline_cache/: dense_contract_tests.rs  lifecycle_tests.rs  method_peek.rs  tests.rs
crates/php_vm/src/vm/: arguments.rs  builtin_adapter.rs  builtin_array_callbacks.rs  builtin_array_sort.rs  builtin_callback_validation.rs  builtin_callbacks.rs  builtin_classes.rs  builtin_environment.rs  builtin_error_output.rs  builtin_fileinfo.rs  builtin_filter_callbacks.rs  builtin_intrinsics.rs  builtin_pcre_callbacks.rs  builtin_settype.rs  builtins.rs  callable_builtins.rs  calls.rs  class_context.rs  class_operations.rs  class_relations.rs  class_validation.rs  closure_operations.rs  dense_dispatch.rs  dense_method_dispatch.rs  dense_pcre_support.rs  dense_runtime_adapters.rs  dense_scalar_handlers.rs  (+59 more)
crates/php_vm_cli/: Cargo.toml
crates/php_vm_cli/src/: commands.rs  engine.rs  lib.rs  main.rs  php_cli.rs  todo_cli.rs
(+10144 files in other folders)
