[workspace]
resolver = "3"
exclude = ["crates/php_bench"]
members = [
    "crates/php_ast",
    "crates/php_bytecode_cache",
    "crates/php_diagnostics",
    "crates/php_executor",
    "crates/php_frontend_cli",
    "crates/php_ir",
    "crates/php_jit",
    "crates/php_lexer",
    "crates/php_lexer_cli",
    "crates/php_optimizer",
    "crates/php_parser_cli",
    "crates/php_perf",
    "crates/php_phpt_tools",
    "crates/php_runtime",
    "crates/php_semantics",
    "crates/php_server",
    "crates/php_source",
    "crates/php_std",
    "crates/php_syntax",
    "crates/php_testkit",
    "crates/php_vm",
    "crates/php_vm_cli",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.95"

[profile.dev]
debug = "line-tables-only"
incremental = false
codegen-units = 256

[profile.dev.build-override]
debug = false
codegen-units = 256

[profile.dev.package."*"]
debug = false

[profile.test]
debug = "line-tables-only"
incremental = false
codegen-units = 256

[profile.test.build-override]
debug = false
codegen-units = 256

[profile.test.package."*"]
debug = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
incremental = false

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = false


