[package]
name = "php_bench"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.95"
publish = false

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
php_ir = { path = "../php_ir", version = "0.0.0" }
php_lexer = { path = "../php_lexer", version = "0.1.0" }
php_runtime = { path = "../php_runtime", version = "0.0.0" }
php_semantics = { path = "../php_semantics", version = "0.1.0" }
php_syntax = { path = "../php_syntax", version = "0.1.0" }
php_vm = { path = "../php_vm", version = "0.0.0" }

[[bench]]
name = "perf_hotpaths"
harness = false
