[package]
name = "php_executor"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
libc = "0.2"
php_diagnostics = { path = "../php_diagnostics", version = "0.0.0" }
php_ir = { path = "../php_ir", version = "0.0.0" }
php_optimizer = { path = "../php_optimizer", version = "0.0.0" }
php_runtime = { path = "../php_runtime", version = "0.0.0" }
php_semantics = { path = "../php_semantics", version = "0.1.0" }
php_source = { path = "../php_source", version = "0.0.0" }
php_vm = { path = "../php_vm", version = "0.0.0" }

[features]
default = ["runtime-telemetry"]
runtime-telemetry = ["php_vm/runtime-telemetry"]
