[package]
name = "php_jit"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
jit-cranelift = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
]

[dependencies]
cranelift-codegen = { version = "0.133.0", optional = true }
cranelift-frontend = { version = "0.133.0", optional = true }
cranelift-jit = { version = "0.133.0", optional = true }
cranelift-module = { version = "0.133.0", optional = true }
cranelift-native = { version = "0.133.0", optional = true }
php_ir = { path = "../php_ir", version = "0.0.0" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
