[package]
name = "php_jit"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cranelift-codegen = "0.133.0"
cranelift-frontend = "0.133.0"
cranelift-jit = "0.133.0"
cranelift-module = "0.133.0"
cranelift-native = "0.133.0"
php_ir = { path = "../php_ir", version = "0.0.0" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
