[package]
name = "php_jit"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cranelift-codegen = "=0.133.1"
cranelift-frontend = "=0.133.1"
cranelift-jit = "=0.133.1"
cranelift-module = "=0.133.1"
cranelift-native = "=0.133.1"
php_ir = { path = "../php_ir", version = "0.0.0" }
php_runtime = { path = "../php_runtime", version = "0.0.0", default-features = false }
php_std = { path = "../php_std", version = "0.0.0", default-features = false }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
