[package]
name = "php_parser_cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "php-parse"
path = "src/main.rs"

[dependencies]
php_lexer = { path = "../php_lexer" }
php_source = { path = "../php_source" }
php_syntax = { path = "../php_syntax" }
