[package]
name = "php_runtime"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22"
blake2b_simd = "1"
bcrypt = "0.17"
crc32fast = "1.4"
ed25519-dalek = "2"
encoding_rs = "0.8"
flate2 = "1"
getrandom = "0.3"
gost94 = "0.11.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
libc = "0.2"
md2 = "0.10.2"
md4 = "0.10.2"
md-5 = "0.10"
murmurs = "1.0.5"
mysql = { version = "28", default-features = false, features = ["minimal-rust"] }
num-bigint = "0.4"
num-traits = "0.2"
openssl = "0.10"
pcre2 = "0.2"
php_diagnostics = { path = "../php_diagnostics", version = "0.0.0" }
php_lexer = { path = "../php_lexer", version = "0.1.0" }
php_source = { path = "../php_source", version = "0.0.0" }
php_syntax = { path = "../php_syntax", version = "0.1.0" }
postgres = "0.19"
ripemd = "0.1.3"
rusqlite = "0.32"
serde_json = { version = "1", features = ["arbitrary_precision", "preserve_order"] }
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
whirlpool = "0.10.4"
xxhash-rust = { version = "0.8.16", features = ["xxh3", "xxh32", "xxh64"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tiger = "0.3.0"
nix = { version = "0.31.3", features = ["fs", "user"] }
curl = "0.4"

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
php_testkit = { path = "../php_testkit", version = "0.0.0" }

[package.metadata.cargo-machete]
ignored = ["md-5"]
