[package]
name = "php_syntax"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
php_lexer = { path = "../php_lexer", version = "0.1.0" }
php_source = { path = "../php_source", version = "0.0.0" }

[package.metadata.parser-snapshots]
update_env = "UPDATE_PARSER_SNAPSHOTS"

[package.metadata.parser-properties]
default_cases = 128
long_cases = 1024
timeout_ms = 2000
