[package]
name = "php_vm"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["jit-copy-patch"]
jit-cranelift = ["dep:php_jit", "php_jit/jit-cranelift"]
# Copy-and-patch native tier bridge, on by default. Pulls php_jit (whose
# copy_patch/code_memory/aarch64 modules are always compiled); no Cranelift.
# Runtime-gated by PHRUST_JIT_COPY_PATCH (default on; set falsey to disable) and
# inert on non-aarch64/non-unix hosts. Disable the compile entirely with
# --no-default-features.
jit-copy-patch = ["dep:php_jit"]

[dependencies]
php_diagnostics = { path = "../php_diagnostics", version = "0.0.0" }
php_ir = { path = "../php_ir", version = "0.0.0" }
php_jit = { path = "../php_jit", version = "0.0.0", optional = true }
php_optimizer = { path = "../php_optimizer", version = "0.0.0" }
php_runtime = { path = "../php_runtime", version = "0.0.0" }
php_semantics = { path = "../php_semantics", version = "0.1.0" }
php_source = { path = "../php_source", version = "0.0.0" }
php_std = { path = "../php_std", version = "0.0.0" }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
php_testkit = { path = "../php_testkit", version = "0.0.0" }
serde_json = "1"
