[package]
name = "php_vm_cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
jit-cranelift = ["dep:php_jit", "php_jit/jit-cranelift", "php_vm/jit-cranelift"]

[[bin]]
name = "php-vm"
path = "src/main.rs"

[[bin]]
name = "phrust-php"
path = "src/bin/phrust_php.rs"

[dependencies]
php_bytecode_cache = { path = "../php_bytecode_cache", version = "0.0.0" }
php_executor = { path = "../php_executor", version = "0.0.0" }
php_ir = { path = "../php_ir", version = "0.0.0" }
php_jit = { path = "../php_jit", version = "0.0.0", optional = true }
php_optimizer = { path = "../php_optimizer", version = "0.0.0" }
php_runtime = { path = "../php_runtime", version = "0.0.0" }
php_semantics = { path = "../php_semantics", version = "0.1.0" }
php_source = { path = "../php_source", version = "0.0.0" }
php_vm = { path = "../php_vm", version = "0.0.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
php_testkit = { path = "../php_testkit", version = "0.0.0" }
