[package]
name = "php_vm_cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["runtime-telemetry"]
runtime-telemetry = [
    "php_server/runtime-telemetry",
    "php_std/runtime-telemetry",
    "php_vm/runtime-telemetry",
    "php_executor/runtime-telemetry",
    "php_runtime/runtime-telemetry",
]

[[bin]]
name = "php-vm"
path = "src/main.rs"

[[bin]]
name = "phrust-php"
path = "src/bin/phrust_php.rs"

[dependencies]
php_diagnostics = { path = "../php_diagnostics", version = "0.0.0" }
php_executor = { path = "../php_executor", version = "0.0.0", default-features = false }
php_jit = { path = "../php_jit", version = "0.0.0" }
php_optimizer = { path = "../php_optimizer", version = "0.0.0" }
php_runtime = { path = "../php_runtime", version = "0.0.0", default-features = false, features = ["full-runtime"] }
php_server = { path = "../php_server", version = "0.0.0", default-features = false }
php_source = { path = "../php_source", version = "0.0.0" }
php_std = { path = "../php_std", version = "0.0.0", default-features = false }
php_vm = { path = "../php_vm", version = "0.0.0", default-features = false }
serde_json = "1"

[dev-dependencies]
php_testkit = { path = "../php_testkit", version = "0.0.0" }
